Fixed parallax on iOS

--- a/css/parallax-static.css
+++ b/css/parallax-static.css
@@ -18,7 +18,7 @@ body {
     background-image: url('../img/background.jpg');
     background-size: 100% auto;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center 50px;
     background-color: #fff;
     font-family: AvenirBlack;
@@ -28,7 +28,6 @@ body {
 @media (min-width: 1200px) {
 	body {
 		background-size: 100% 100%;
-		background-attachment: scroll;
 	}
 }
 
@@ -73,6 +72,18 @@ body {
 	margin-right: auto;
 }
 
+
+
+/* debug box */
+#debug-box {
+	display: block;
+	position: fixed;
+	left: 10px;
+	top: 10px;
+	background-color: #fff;
+	color: #000;
+	z-index: 5;
+}
 
 
 
